fix ImageView full image being too tall

--- a/src/utils/Form/FileUploader/FileUploader.scss
+++ b/src/utils/Form/FileUploader/FileUploader.scss
@@ -153,10 +153,9 @@
           border-radius: 9999px;
 
           &:hover {
-            // text-decoration: underline;
-            color: #666;
+            color: #222;
             padding: 5px 10px;
-            border: 1px solid #ccc;
+            border: 1px solid #bbb;
           }
         }
       }
