--- a/src/utils/Form/ImageView/ImageView.scss
+++ b/src/utils/Form/ImageView/ImageView.scss
@@ -34,6 +34,7 @@
         &--full {
             width: 100%;
             max-width: 800px;
+            max-height: 80vh;
             border-radius: 0;
         }
 
